{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 85,
  "lineage": "6196cc12-29f7-7318-dee2-144a0717ff22",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_nomad",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "4646",
                  "4647",
                  "4648",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-21T07:55:09.109-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/k1m0ch1/global/firewalls/allow-nomad-internal",
            "log_config": [],
            "name": "allow-nomad-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/global/networks/basic-nomad-network",
            "priority": 1000,
            "project": "k1m0ch1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/global/firewalls/allow-nomad-internal",
            "source_ranges": [
              "10.10.1.0/24",
              "10.10.2.0/24",
              "10.10.3.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "nomad"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.nomad_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "51820"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-21T07:55:09.124-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/k1m0ch1/global/firewalls/allow-ssh-to-vpn",
            "log_config": [],
            "name": "allow-ssh-to-vpn",
            "network": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/global/networks/basic-nomad-network",
            "priority": 1000,
            "project": "k1m0ch1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/global/firewalls/allow-ssh-to-vpn",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "vpn"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.nomad_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nomad_client_southeastfirst",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250508",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/zones/asia-southeast1-a/disks/nomad-client-southeastfirst-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-05-21T07:55:33.416-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/k1m0ch1/zones/asia-southeast1-a/instances/nomad-client-southeastfirst-1",
            "instance_id": "6377994921151846282",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "BGM7BoV6XwA=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update \u0026 install dependencies\napt-get update -y\napt-get install -y unzip curl gnupg docker.io\n\n# Install Nomad\ncurl -fsSL https://apt.releases.hashicorp.com/gpg | gpg --dearmor -o /usr/share/keyrings/hashicorp.gpg\necho \"deb [signed-by=/usr/share/keyrings/hashicorp.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main\" \\\n    \u003e /etc/apt/sources.list.d/hashicorp.list\napt-get update \u0026\u0026 apt-get install - [...]
            "name": "nomad-client-southeastfirst-1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/global/networks/basic-nomad-network",
                "network_ip": "10.10.1.101",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/regions/asia-southeast1/subnetworks/nomad-subnet-southeast-first",
                "subnetwork_project": "k1m0ch1"
              }
            ],
            "project": "k1m0ch1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/zones/asia-southeast1-a/instances/nomad-client-southeastfirst-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "client",
              "nomad",
              "production"
            ],
            "tags_fingerprint": "Mu-I_EwoWdk=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-a"
          },
          "dependencies": [
            "google_compute_network.nomad_net",
            "google_compute_subnetwork.nomad_subnet_southeastfirst"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250508",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/zones/asia-southeast1-a/disks/nomad-client-southeastfirst-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-05-21T07:55:35.626-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/k1m0ch1/zones/asia-southeast1-a/instances/nomad-client-southeastfirst-2",
            "instance_id": "7429393294485903240",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "BGM7BoV6XwA=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update \u0026 install dependencies\napt-get update -y\napt-get install -y unzip curl gnupg docker.io\n\n# Install Nomad\ncurl -fsSL https://apt.releases.hashicorp.com/gpg | gpg --dearmor -o /usr/share/keyrings/hashicorp.gpg\necho \"deb [signed-by=/usr/share/keyrings/hashicorp.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main\" \\\n    \u003e /etc/apt/sources.list.d/hashicorp.list\napt-get update \u0026\u0026 apt-get install - [...]
            "name": "nomad-client-southeastfirst-2",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/global/networks/basic-nomad-network",
                "network_ip": "10.10.1.102",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/regions/asia-southeast1/subnetworks/nomad-subnet-southeast-first",
                "subnetwork_project": "k1m0ch1"
              }
            ],
            "project": "k1m0ch1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/zones/asia-southeast1-a/instances/nomad-client-southeastfirst-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "client",
              "nomad",
              "production"
            ],
            "tags_fingerprint": "Mu-I_EwoWdk=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-a"
          },
          "dependencies": [
            "google_compute_network.nomad_net",
            "google_compute_subnetwork.nomad_subnet_southeastfirst"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nomad_server_south",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250508",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/zones/asia-south1-a/disks/nomad-server-south-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-05-21T07:55:46.472-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/k1m0ch1/zones/asia-south1-a/instances/nomad-server-south-1",
            "instance_id": "3682655213493180318",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "pOcRxvk6A3U=",
            "metadata_startup_script": "#!/bin/bash\napt update -y\napt install unzip curl -y\ncurl -fsSL https://apt.releases.hashicorp.com/gpg | gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg\necho \"deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main\" \\\n  \u003e /etc/apt/sources.list.d/hashicorp.list\napt update -y\napt install nomad docker.io -y\n\nmkdir -p /opt/nomad\ncat \u003c\u003cEOF \u003e / [...]
            "name": "nomad-server-south-1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/global/networks/basic-nomad-network",
                "network_ip": "10.10.3.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/regions/asia-south1/subnetworks/nomad-subnet-south",
                "subnetwork_project": "k1m0ch1"
              }
            ],
            "project": "k1m0ch1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/zones/asia-south1-a/instances/nomad-server-south-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "nomad",
              "production",
              "server"
            ],
            "tags_fingerprint": "o3OALAJ77S4=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "google_compute_network.nomad_net",
            "google_compute_subnetwork.nomad_subnet_south"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nomad_server_southeastfirst",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250508",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/zones/asia-southeast1-a/disks/nomad-server-southeastfirst-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-05-21T07:55:33.824-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/k1m0ch1/zones/asia-southeast1-a/instances/nomad-server-southeastfirst-1",
            "instance_id": "8977161145592862602",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "pOcRxvk6A3U=",
            "metadata_startup_script": "#!/bin/bash\napt update -y\napt install unzip curl -y\ncurl -fsSL https://apt.releases.hashicorp.com/gpg | gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg\necho \"deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main\" \\\n  \u003e /etc/apt/sources.list.d/hashicorp.list\napt update -y\napt install nomad docker.io -y\n\nmkdir -p /opt/nomad\ncat \u003c\u003cEOF \u003e / [...]
            "name": "nomad-server-southeastfirst-1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/global/networks/basic-nomad-network",
                "network_ip": "10.10.1.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/regions/asia-southeast1/subnetworks/nomad-subnet-southeast-first",
                "subnetwork_project": "k1m0ch1"
              }
            ],
            "project": "k1m0ch1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/zones/asia-southeast1-a/instances/nomad-server-southeastfirst-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "nomad",
              "production",
              "server"
            ],
            "tags_fingerprint": "o3OALAJ77S4=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-a"
          },
          "dependencies": [
            "google_compute_network.nomad_net",
            "google_compute_subnetwork.nomad_subnet_southeastfirst"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nomad_server_southeastsecond",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250508",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/zones/asia-southeast2-a/disks/nomad-server-southeastsecond-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2025-05-21T07:55:33.051-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/k1m0ch1/zones/asia-southeast2-a/instances/nomad-server-southeastsecond-1",
            "instance_id": "6439199433480492939",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "pOcRxvk6A3U=",
            "metadata_startup_script": "#!/bin/bash\napt update -y\napt install unzip curl -y\ncurl -fsSL https://apt.releases.hashicorp.com/gpg | gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg\necho \"deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main\" \\\n  \u003e /etc/apt/sources.list.d/hashicorp.list\napt update -y\napt install nomad docker.io -y\n\nmkdir -p /opt/nomad\ncat \u003c\u003cEOF \u003e / [...]
            "name": "nomad-server-southeastsecond-1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/global/networks/basic-nomad-network",
                "network_ip": "10.10.2.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/regions/asia-southeast2/subnetworks/nomad-subnet-southest-second",
                "subnetwork_project": "k1m0ch1"
              }
            ],
            "project": "k1m0ch1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/zones/asia-southeast2-a/instances/nomad-server-southeastsecond-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "nomad",
              "production",
              "server"
            ],
            "tags_fingerprint": "o3OALAJ77S4=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast2-a"
          },
          "dependencies": [
            "google_compute_network.nomad_net",
            "google_compute_subnetwork.nomad_subnet_southeastsecond"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250508",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/zones/asia-southeast1-a/disks/vpn-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-05-21T07:55:35.258-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/k1m0ch1/zones/asia-southeast1-a/instances/vpn-server",
            "instance_id": "3005146636767745929",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "DfGXAjplVY8=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update \u0026 install WireGuard\napt update -y\napt install -y wireguard qrencode\n\n# Enable IP forwarding\necho \"net.ipv4.ip_forward=1\" \u003e\u003e /etc/sysctl.conf\necho \"net.ipv6.conf.all.forwarding=1\" \u003e\u003e /etc/sysctl.conf\nsysctl -p\n\n# Create config directory\nWG_DIR=\"/etc/wireguard\"\nmkdir -p $WG_DIR\ncd $WG_DIR\n\n# Generate server keys\numask 077\nwg genkey | tee server.key | wg pubkey \u003e server.pub\n\nPRIVATE [...]
            "name": "vpn-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.142.188.176",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/global/networks/basic-nomad-network",
                "network_ip": "10.10.1.200",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/regions/asia-southeast1/subnetworks/nomad-subnet-southeast-first",
                "subnetwork_project": "k1m0ch1"
              }
            ],
            "project": "k1m0ch1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/zones/asia-southeast1-a/instances/vpn-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "vpn"
            ],
            "tags_fingerprint": "s78FYhaXW7M=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-a"
          },
          "dependencies": [
            "google_compute_network.nomad_net",
            "google_compute_subnetwork.nomad_subnet_southeastfirst"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "nomad_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/k1m0ch1/global/networks/basic-nomad-network",
            "mtu": 0,
            "name": "basic-nomad-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "536386777758324686",
            "numeric_id": "536386777758324686",
            "project": "k1m0ch1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/global/networks/basic-nomad-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "nomad_subnet_south",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-21T07:55:11.435-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.10.3.1",
            "id": "projects/k1m0ch1/regions/asia-south1/subnetworks/nomad-subnet-south",
            "ip_cidr_range": "10.10.3.0/24",
            "name": "nomad-subnet-south",
            "network": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/global/networks/basic-nomad-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "k1m0ch1",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/regions/asia-south1/subnetworks/nomad-subnet-south",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4469087742847899552
          },
          "dependencies": [
            "google_compute_network.nomad_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "nomad_subnet_southeastfirst",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-21T07:55:09.739-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.10.1.1",
            "id": "projects/k1m0ch1/regions/asia-southeast1/subnetworks/nomad-subnet-southeast-first",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "nomad-subnet-southeast-first",
            "network": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/global/networks/basic-nomad-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "k1m0ch1",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/regions/asia-southeast1/subnetworks/nomad-subnet-southeast-first",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2157618511160039330
          },
          "dependencies": [
            "google_compute_network.nomad_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "nomad_subnet_southeastsecond",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-21T07:55:09.799-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.10.2.1",
            "id": "projects/k1m0ch1/regions/asia-southeast2/subnetworks/nomad-subnet-southest-second",
            "ip_cidr_range": "10.10.2.0/24",
            "name": "nomad-subnet-southest-second",
            "network": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/global/networks/basic-nomad-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "k1m0ch1",
            "purpose": "PRIVATE",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/k1m0ch1/regions/asia-southeast2/subnetworks/nomad-subnet-southest-second",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7039680030904965026
          },
          "dependencies": [
            "google_compute_network.nomad_net"
          ]
        }
      ]
    }
  ]
}